k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trackmania-frontend
  name: trackmania-frontend
spec:
  selector:
    matchLabels:
      app: trackmania-frontend
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: trackmania-frontend
    spec:
      containers:
        - name: trackmania-frontend
          image: ghcr.io/hannehue/trackmania-frontend:c8e1dbe9cb429da2b106e4e5401368b1dca1df81
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trackmania-frontend
  name: trackmania-frontend-service
spec:
  selector:
    app: trackmania-frontend
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
