k8s/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redis-pvc
          persistentVolumeClaim:
            claimName: redis-pvc # name of the actual pvc
      containers:
        - name: redis
          image: redis:7.4
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-pvc
              mountPath: /data
              subPath: redis
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  type: ClusterIP
