k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # These annotations are required to use ALB Ingress Controller
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
  name: frontend-ingress
spec:
  ingressClassName: "alb"
  rules:
    # you need to change the host to match your own
    - host: trackmania.sdu.eficode.academy
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                # change this to match your service name
                name: trackmania-frontend-service
                port:
                  number: 8080
